gcc/testsuite/algol68/compile/error-mode-stropping-11.a68
# { dg-options "-fstropping=upper" }  #
BEGIN LONG LONG INT j;
      j := "joo" { dg-error "CHAR.*LONG LONG INT" }
END
